app1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - image: nginx:alpine
        name: app1
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500
            memory: 128Mi
