app1/service.yml
kind: Service
apiVersion: v1
metadata:
  name: app1
spec:
  selector:
    app: app1
  ports:
    - port: 80
